was able to fix navbar issue, was 'just' emphasis on those quotes -.- a matter of changing visibility: hidden to none and then instead of display: visible -> display: block 'that easy'

--- a/plumbing.css
+++ b/plumbing.css
@@ -65,7 +65,7 @@ body {
 .services-selection {
     position: absolute;
     opacity: 0%;
-    visibility: none;
+    display: none;
 }
 
 .services-selection ul {
@@ -96,7 +96,7 @@ body {
 
 .nav-links-container li:hover > div {
     opacity: 100%;
-    visibility: visible;
+    display: block;
 }
 
 #nav-bar-toggle {
